2010-03-04  James Robinson  <jamesr@google.com>

Reviewed by Eric Seidel.

        Styles do not have to be synchronously rematched after every event dispatch

        https://bugs.webkit.org/show_bug.cgi?id=32580

        * bindings/js/JSEventListener.cpp:
        (WebCore::JSEventListener::handleEvent):
        * bindings/v8/V8AbstractEventListener.cpp:
        (WebCore::V8AbstractEventListener::handleEvent):

Canonical link: https://commits.webkit.org/46865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55568 268f45cc-cd09-0410-ab3c-d52691b4dbfc